# notepad-plus-plus

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  Archivo.txt  BUILD.md  BUILD_MACOS.md  Big 2 Shortcut for Save As is not normal (Ctrl + Shift + S)  Bug 1  Bug 3  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CellBuffer.cxx  CellBuffer.h  Changes.txt  CppProperties.json  Document.h  FindReplaceDlg_rc.h  ISSUE_TEMPLATE.md  LAZY_SESSION_RISKS.md  LICENSE  MACOS_PORT_STATUS.md  PHASE4A_COMPLETE.md  PHASE4A_IN_PROGRESS.md  PHASE4B_IN_PROGRESS.md  PHASE4B_VALIDATION_LOG.md  PHASE4C_FOUNDATION.md  Parameters.h  Prueba  README.md  SUPPORTED_SYSTEM.md  Sky G  WordStyleDlg.cpp  WordStyleDlg.h  WordStyleDlg.rc  _Build Release.bat  appveyor-build.cmd  appveyor.yml  (+30 more)
PowerEditor/: CMakeLists.txt  WinControls - Shortcut.lnk  license.txt
PowerEditor/UnitTests/: TestCOM.cpp  TestCommon.cpp  TestFS.cpp  UnitTests.vcxproj  packages.config  pch.cpp  pch.h  test.cpp
PowerEditor/gcc/: Makefile.win  delete.bat  gcc-fixes.h  makefile  manifest.rc  readme.md  readme.txt  resources.rc
PowerEditor/installer/: GetWindowsVersion.nsi  configModel.xml  nppSetup.nsi  packageAll.bat  sign-binaries.bat  sign-installers.bat  stylers_remove.xml  stylesGlobalModel.xml  stylesLexerModel.xml
PowerEditor/resources/: nppPluginList.json
PowerEditor/scintilla.original.forUpdating/: scintilla.original.forUpdating.7z  scintillaUpdatingWorkFlow.txt
PowerEditor/script/: validate_native_lang.py
PowerEditor/scripts/: StylesCheck.py
PowerEditor/src/: .editorconfig  CMakeLists.txt  DarkMode.cpp  EncodingMapper.cpp  EncodingMapper.h  Notepad_plus.aps  Notepad_plus.cpp  Notepad_plus.cpp.bak  Notepad_plus.cpp.internalDockingDlg  Notepad_plus.h  Notepad_plus.rc  Notepad_plus.rc2  Notepad_plus_Window.cpp  Notepad_plus_Window.h  NppBigSwitch.cpp  NppCommands.cpp  NppDarkMode.cpp  NppDarkMode.h  NppIO.cpp  NppLibsVersion.h  NppLibsVersionH-generator.bat  NppLocalization.cpp  NppNotification.cpp  NppXml.h  Parameters.cpp  Parameters.cpp.bak  Parameters.h  Parameters.h.bak  RCa02172  SciLexVerRes-extractor.bat  StaticControl.h  UniConversion.cpp  UniConversion.h  Utf8.h  Utf8_16.cpp  Utf8_16.h  clipboardFormats.h  config.4zipPackage.xml  config.model.xml  constant.h  (+32 more)
PowerEditor/visual.net/: dependencies.dgml  no_ms_shit.vsprops  notepadPlus.7.0.vcproj  notepadPlus.Cpp.props  notepadPlus.Resource.targets  notepadPlus.ruleset  notepadPlus.sln  notepadPlus.sln.cache  notepadPlus.uchardet.targets  notepadPlus.vc.7.0.vcproj  notepadPlus.vcproj  notepadPlus.vcxproj  notepadPlus.vs2005.vcproj  notepadPlus.vs2013.vcxproj  notepadPlus.vs2015.vcxproj  notepadPlus.vs2015.vcxproj.filters  notepadPlus.vs2017.vcxproj  notepadPlus.vs2017.vcxproj.filters  packages.config  stdafx.h
boostregex/: AnsiDocumentIterator.h  BoostRegExSearch.cxx  CMakeLists.txt  UTF8DocumentIterator.cxx  UTF8DocumentIterator.h  nppSpecifics.mak  nppSpecifics_mingw.mak
boostregex/boost/: regex.hpp  regex_fwd.hpp  throw_exception.hpp  version.hpp
lexilla/: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING  License.txt  README  cppcheck.suppress  delbin.bat  tgzsrc  version.txt  zipsrc.bat
lexilla/access/: LexillaAccess.cxx  LexillaAccess.h  README
lexilla/doc/: Lexilla.html  LexillaDoc.html  LexillaDownload.html  LexillaHistory.html
lexilla/include/: LexicalStyles.iface  Lexilla.h  SciLexer.h
lexilla/lexers/: LexA68k.cxx  LexAPDL.cxx  LexASY.cxx  LexAU3.cxx  LexAVE.cxx  LexAVS.cxx  LexAbaqus.cxx  LexAda.cxx  LexAsciidoc.cxx  LexAsm.cxx  LexAsn1.cxx  LexBaan.cxx  LexBash.cxx  LexBasic.cxx  LexBatch.cxx  LexBibTeX.cxx  LexBullant.cxx  LexCIL.cxx  LexCLW.cxx  LexCOBOL.cxx  LexCPP.cxx  LexCSS.cxx  LexCaml.cxx  LexCmake.cxx  LexCoffeeScript.cxx  LexConf.cxx  LexCrontab.cxx  LexCsound.cxx  LexD.cxx  LexDMAP.cxx  LexDMIS.cxx  LexDart.cxx  LexDataflex.cxx  LexDiff.cxx  LexECL.cxx  LexEDIFACT.cxx  LexEScript.cxx  LexEiffel.cxx  LexErlang.cxx  LexErrorList.cxx  (+88 more)
lexilla/lexlib/: Accessor.cxx  Accessor.h  CatalogueModules.h  CharacterCategory.cxx  CharacterCategory.h  CharacterSet.cxx  CharacterSet.h  DefaultLexer.cxx  DefaultLexer.h  InList.cxx  InList.h  LexAccessor.cxx  LexAccessor.h  LexerBase.cxx  LexerBase.h  LexerModule.cxx  LexerModule.h  LexerNoExceptions.cxx  LexerNoExceptions.h  LexerSimple.cxx  LexerSimple.h  OptionSet.h  PropSetSimple.cxx  PropSetSimple.h  SparseState.h  StringCopy.h  StyleContext.cxx  StyleContext.h  SubStyles.h  WordList.cxx  WordList.h
lexilla/scripts/: HeaderOrder.txt  LexFacer.py  LexillaData.py  LexillaGen.py  LexillaLogo.py  PromoteNew.bat  RunTest.bat  RunTest.sh
lexilla/src/: DepGen.py  Lexilla.cxx  Lexilla.def  Lexilla.pro  Lexilla.ruleset  Lexilla.vcxproj  LexillaVersion.rc  deps.mak  lexilla.mak  makefile  nmdeps.mak
lexilla/test/: README  TestDocument.cxx  TestDocument.h  TestLexers.cxx  TestLexers.vcxproj  makefile  testlexers.mak
macos/: CMakeLists.txt
macos/platform/: MacNoteInfo.plist.in  about_dialog.h  about_dialog.mm  app_delegate.h  app_delegate.mm  app_main.mm  app_state.h  app_state.mm  appearance.h  appearance.mm  auto_close.h  auto_close.mm  auto_indent.h  auto_indent.mm  autocomplete.h  autocomplete.mm  bookmarks.h  bookmarks.mm  brace_match.h  brace_match.mm  build_test.mm  change_history.h  change_history.mm  clipboard_history_panel.h  clipboard_history_panel.mm  context_menu.h  context_menu.mm  document_data.h  document_manager.h  document_manager.mm  document_map.h  document_map.mm  edit_commands.h  edit_commands.mm  file_browser_panel.h  file_browser_panel.mm  file_operations.h  file_operations.mm  file_path_ops.h  file_path_ops.mm  (+71 more)
macos/plugin-sdk/: CMakeLists.txt
macos/scripts/: clean-debug-build.sh  sign-and-notarize.sh
plugins/comparePlus/: .gitignore  CMakeLists.txt  Compare-plugin_ReleaseNotes.txt  Help.md  README.md  ReleaseNotes.txt  appveyor.yml
scintilla/: .editorconfig  CMakeLists.txt  CONTRIBUTING  License.txt  README  cppcheck.suppress  delbin.bat  delcvs.bat  tgzsrc  version.txt  zipsrc.bat
scintilla/boostregex/: BuildBoost.bat  (+9 more)
(+2974 files in other folders)
